--- a/webapp/src/main/webapp/skin/smartactivityadministration.css
+++ b/webapp/src/main/webapp/skin/smartactivityadministration.css
@@ -11,7 +11,6 @@
     width: 100%;
     position: absolute;
     z-index: 77;
-    overflow-x: hidden;
 }
 
 #app-smartactivity-table-vue-and-vuetify .open-row-arrow {
@@ -24,10 +23,6 @@
     text-shadow: none;
 }
 
-#subtable tr:hover {
-    background-color: #c7d2e1;
-}
-
 #subtable .v-data-table-header {
     visibility: hidden;
 }
@@ -36,7 +31,7 @@
     display: none;
 }
 
-#subtable .v-data-table__wrapper {
-    overflow-x: hidden;
+.shift-div{
+    width:24px;
 }
 
