--- a/webapp/src/main/webapp/skin/smartactivityadministration.css
+++ b/webapp/src/main/webapp/skin/smartactivityadministration.css
@@ -2,25 +2,12 @@
     padding: 10px;
 }
 
-
 #subtable .v-application--wrap {
     min-height: 0px;
 }
 
 #subtable {
-    width: 100%;
-    position: absolute;
-    z-index: 77;
-}
-
-#app-smartactivity-table-vue-and-vuetify .open-row-arrow {
-    font-weight: 800;
-    font-size: large;
-}
-
-#app-smartactivity-table-vue-and-vuetify .v-data-table-header:hover {
-    background-color: #ffffff;
-    text-shadow: none;
+    margin-right: 24px;
 }
 
 #subtable .v-data-table-header {
@@ -31,7 +18,6 @@
     display: none;
 }
 
-.shift-div{
-    width:24px;
+#subtable-column{
+    padding: 0px;
 }
-
