--- a/webapp/src/main/webapp/skin/smartactivityadministration.css
+++ b/webapp/src/main/webapp/skin/smartactivityadministration.css
@@ -2,6 +2,10 @@
     padding: 10px;
 }
 
+#substream-selector-app {
+    padding: 10px;
+}
+
 #subtable .v-application--wrap {
     min-height: 0px;
 }
