Refactored code; fixed getUserFocuses functionality (ajax request and rest service); changed stream selection mechanism (data request from RESTActivityStatsService changed to jsp)

--- a/webapp/src/main/webapp/skin/smartactivity-admin.css
+++ b/webapp/src/main/webapp/skin/smartactivity-admin.css
@@ -22,6 +22,10 @@
     display: none;
 }
 
-#subtable-column{
+#subtable-column {
     padding: 0px;
+}
+
+#hidden-space-selector-data {
+    display: none;
 }
