--- a/webapp/src/main/webapp/skin/smartactivity-admin.css
+++ b/webapp/src/main/webapp/skin/smartactivity-admin.css
@@ -12,7 +12,7 @@ body {
 }
 
 #subtable .v-application--wrap {
-    min-height: 0px;
+    min-height: 0;
 }
 
 #subtable {
@@ -28,11 +28,18 @@ body {
 }
 
 #subtable-column {
-    padding: 0px;
+    padding: 0;
 }
 
 #hidden-space-selector-data {
     display: none;
 }
 
+#app-smartactivity-table-vue-and-vuetify {
+    padding: 0;
+}
+
+.activity-data-title {
+    margin: 0;
+}
 
