Added the mechanizm for getting and displaying subtable data; refactored code.

--- a/webapp/src/main/webapp/skin/smartactivity-admin.css
+++ b/webapp/src/main/webapp/skin/smartactivity-admin.css
@@ -16,12 +16,18 @@ body {
 }
 
 #subtable {
-    margin-right: 24px;
+    padding-bottom: 1px;
+    padding-top: 3px;
 }
 
 #subtable .v-data-table-header {
     visibility: hidden;
 }
+
+#subtable .subtable-hidden-value {
+    visibility: hidden;
+}
+
 
 #subtable .v-data-footer {
     display: none;
