--- a/webapp/src/main/webapp/skin/smartactivity-admin.css
+++ b/webapp/src/main/webapp/skin/smartactivity-admin.css
@@ -11,6 +11,13 @@ body {
     padding: 10px;
 }
 
+#app-smartactivity-table-vue-and-vuetify tbody td {
+    font-size: 12px;
+}
+#app-smartactivity-table-vue-and-vuetify tbody p {
+    font-size: 12px;
+}
+
 #subtable .v-application--wrap {
     min-height: 0;
 }
@@ -19,6 +26,14 @@ body {
     padding-bottom: 1px;
     padding-top: 3px;
 }
+
+#subtable tbody td {
+    font-size: 12px;
+}
+#subtable tbody p {
+    font-size: 12px;
+}
+
 
 #subtable .v-data-table-header {
     visibility: hidden;
@@ -49,16 +64,19 @@ body {
 }
 
 .subchart {
-    position: absolute;
+    position: relative;
     margin-top: 3px;
-    width: 370px;
+    width: 360px;
     height: 110px;
     visibility: visible;
     z-index: 1;
+    margin-bottom: -113px;
 }
 
 #subtable-chart {
     display: block;
 }
+
+
 
 
