Added the subtable chart displayting by click on the needed column of the subtable (focuses and hits; the default column for the chart is Total Focus); added the shadow on hovering  to this columns; decreased the height of the table titles.

--- a/webapp/src/main/webapp/skin/smartactivity-admin.css
+++ b/webapp/src/main/webapp/skin/smartactivity-admin.css
@@ -43,6 +43,7 @@ body {
 #app-smartactivity-table-vue-and-vuetify thead th {
     vertical-align: top;
     padding: 2px 4px 2px 4px;
+    height: fit-content;
 }
 
 #app-smartactivity-table-vue-and-vuetify tbody td {
