--- a/webapp/src/main/webapp/skin/smartactivity-admin.css
+++ b/webapp/src/main/webapp/skin/smartactivity-admin.css
@@ -6,31 +6,81 @@ body {
 #time-scale {
     width: 70%;
     float: left;
+    font-size: 10px;
+}
+
+.v-input__slot{
+    font-size: 14px;
+}
+
+#time-scale .v-card__text {
+    padding-top: 15px;
+    padding-bottom: 14px;
 }
 
 #stream-selector {
     width: 30%;
     float: left;
+    position: sticky;
+    z-index: 1000;
+    margin-bottom: -5px;
 }
 
 #stream-selector .v-input {
-    padding-top: 2px;
-    padding-left: 5px;
+    padding-top: 6px;
 }
 
-#stream-selector-app {
+#stream-selector .v-input__slot {
+    width: unset;
+}
 
+#stream-selector .v-select__selections {
+    box-sizing: border-box;
+    padding: 0;
+}
+
+#stream-selector .v-select__selections input {
+    box-shadow: none;
 }
 
 #substream-selector {
     float: right;
     width: 30%;
+    margin-bottom: -10%;
+    position: sticky;
+    z-index: 1000;
 }
 
 #substream-selector .v-input {
     padding-top: 2px;
-    padding-left: 5px;
 }
+
+#substream-selector .v-select__selections input {
+    box-shadow: none;
+}
+
+#substream-selector .v-input__slot {
+    width: unset;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#substream-selector .v-select__selections {
+    box-sizing: border-box;
+}
+
+#substream-selector .v-input__slot::before {
+    border-style: none;
+}
+
+#substream-selector .v-input__slot::after {
+    border-style: none;
+}
+
+.v-messages {
+    display: none;
+}
+
 
 #app-smartactivity-table-vue-and-vuetify {
     float: left;
