--- a/webapp/src/main/webapp/skin/smartactivity-admin.css
+++ b/webapp/src/main/webapp/skin/smartactivity-admin.css
@@ -26,6 +26,10 @@ body {
     margin-bottom: -5px;
 }
 
+#stream-selector-app{
+    padding-right: 20px;
+}
+
 #stream-selector .v-input {
     padding-top: 6px;
 }
@@ -49,6 +53,10 @@ body {
     margin-bottom: -10%;
     position: sticky;
     z-index: 1000;
+}
+
+#substream-selector-app{
+    padding-right: 20px;
 }
 
 #substream-selector .v-input {
