Added the link to activity statistics in the user dropdown-menu and userNavigation menu (supports localization, added icons); added StatsFeaturePlugin and needed components (GlobalSettings, StatsUtils, smart-activity-stream-configuration.xml) for defining isFeatureActiveForUser for smartactivity (statistics) (default  accessPermission = '*:/platform/users'); changed gatein_resources_1_3 to gatein_resources_1_4; refactored code

--- a/webapp/src/main/webapp/skin/smartactivity-admin.css
+++ b/webapp/src/main/webapp/skin/smartactivity-admin.css
@@ -222,6 +222,9 @@ body {
     width: 115px;
 }
 
+.uiUserNavIconAppStats:before {
+    content: url("/smartactivity/icon/stats-icon25blue.png") !important;
+}
 
 
 
